<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="mycollege.asmobisoft.com.restaurentapp.Navigationnn.SettingFragment">

    <include
        android:id="@+id/toolbar4"
        layout="@layout/toolbar5" />

    <LinearLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivTitleIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/imageView"

            android:layout_marginLeft="20dp"
            android:src="@mipmap/gaurav" />


        <LinearLayout
            android:id="@+id/nav_header_containe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:hint="@string/hintname"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Photo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/green" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:hint="@string/name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:hint="@string/phn"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintt" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:hint="@string/emaill"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:hint="@string/pswd"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColorHint="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintpassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btnsave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="save"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>