<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="6"
    >
    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_weight="6">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/deladd"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/add1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/green"  />

        <TextView
            android:id="@+id/tv_address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/address"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/credit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cardno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Card no"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_cardno2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cardno"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CHECKOUT"
android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_$"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/white"
            android:text="$18.75"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

    </LinearLayout>





