<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgg"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="@string/signinn"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="enter your data"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_phonee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:hint="@string/phn"
                android:inputType="textPersonName"
                android:paddingTop="25dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textCursorDrawable="@drawable/cursor_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                />

            <EditText
                android:id="@+id/et_passwrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:hint="@string/pswd"
                android:inputType="textPassword"
                android:paddingTop="25dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textCursorDrawable="@drawable/cursor_color" />

            <View
                android:id="@+id/UnderLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"

                />


            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:text="@string/forgot"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/green" />

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_buuton"
                android:text="SIGN IN"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="OR"

                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:background="@drawable/twitter"
                android:text="SIGN in with Google+"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/fb"
                android:text="Sign in with Facebook"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:text="New here?"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_signuppp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/signin"
                    android:textColor="@color/green" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>